fixed subscribe button upper padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ em {
     cursor: pointer;
     font-size: 14px;
     padding: 20.5px;
-    padding-top: 9px;
+    padding-top: 9.5px;
     padding-bottom: 8px;
     border-radius: 25px;
     border: none;
